<resources>
    <string name="app_name">MG 4 Swipe</string>
    <string name="explanation_text">Choose an app to launch with a swipe up.</string>
    <string name="show_system_apps">Show System Apps</string>
    <string name="hide_system_apps">Hide System Apps</string>
    <string name="accessibility_service_description">The button in this app functions as a virtual "back" button, simulating the action of a physical back button on your device. When pressed, it uses the Accessibility Service to send a command that mimics the back action, allowing you to navigate to the previous screen or close the current app. This can be especially useful on devices without dedicated navigation buttons, providing a quick and convenient way to move back without needing to reach for the on-screen navigation bar. For this feature to work, you\'ll need to enable the app\'s Accessibility Service in the device settings.</string>
    <string name="permission_accessibility_explanation">To function properly, the app needs accessibility permission. \nOnce granted you must reopen the application.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_overlay_explanation">To function properly, the app needs permission to draw on top of other apps. \nOnce granted you must reopen the application.</string>
    <string name="hide_back_button_description">Hide the floating back button, useful for car servicing (this is hidden by default)</string>
    <string name="help_swipe_back">Help: Swipe up here to go back (this simulate the physical back button)</string>
    <string name="help_swipe_launch">Help: Swipe up here to open selected app</string>
    <string name="notification_title">MG4 Swipe Active</string>
    <string name="notification_text">Tap to change settings</string>
    <string name="notification_channel">Swipe Service Channel</string>
    <string name="toast_selected">Selected: %s</string>
    <string name="toast_no_app">No launchable app found</string>
    <string name="uninstall">Uninstall</string>
    <string name="uninstall_confirm">This will stop the swipe service and remove the app. Continue?</string>
</resources>