<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_home"
    android:orientation="vertical"
    android:paddingTop="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="200dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/toggle_system_apps_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/show_system_apps"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/switch_back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/hide_back_button_description"
            android:textAlignment="viewEnd"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/uninstall_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/uninstall"
            android:textSize="20sp"
            android:textColor="#FF5555" />

    </LinearLayout>

    <TextView
        android:id="@+id/explanation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginBottom="16dp"
        android:text="@string/explanation_text"
        android:textSize="30sp" />

    <ListView
        android:id="@+id/app_list"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_marginHorizontal="200dp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#3F51B5"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/help_swipe_back"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#FF5722"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/help_swipe_launch"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
